# src/users/user.route.js
@@ -2,7 +2,7 @@ import express from 'express';
 const userRoute = express.Router();
 import { findAllUsers, createUser } from './user.controller.js';
 
-userRoute.get('/', findAllUsers);
+userRoute.get('/create', findAllUsers);
 userRoute.post('/', createUser);
 
 export default userRoute;
